--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: One Page Wonder - Jekyll
-description: A Jekyll Landing Page Theme
-sitename: Your Website
-baseurl: '/one-page-wonder-jekyll'
+title: Advokátska kancelária Voleková
+description: Advokátska kancelária Voleková poskytuje kvalitné poradenstvo v oblasti vo všektých právnych oblastiach. Prvotriedne služby sú zabezpečené dlhoročnými skúsenosťami a množstvom spokojných klientov.
+sitename: Advokátska kancelária Voleková
+baseurl: '/'
 sass:
   sass_dir: /assets/_sass
   style: :compressed
